--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -7,11 +7,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Chamber of Commerce Directory</title>
     <meta name="description" content="Directory of Chamber of Commerce members">
+    <meta property="og:description" content="Discover local businesses and organizations in our chamber directory. find out our membership and their level in the chanber commerce websiteLearn about membership benefits and join today!">
     <meta name="author" content="Ernest Ohwojeheri">
     <link rel="icon" href="images/favicon">
     <meta property="og:title" content="Chamber  Directory of Commerce">
     <meta property="og:type" content="website">
-    <meta property="og:image" content="images/member-images/image.jpg">
+    <meta property="og:image" content="https://images.seeklogo.com/logo-png/2/1/british-airways-logo-png_seeklogo-22597.png",
+    ">
     <meta property="og:url" content="https://ernestsb1.github.io/wdd231/chamber/directory.html">
     <link rel="stylesheet" href="styles/normalize.css">
     <link rel="stylesheet" href="styles/directory.css">
@@ -30,10 +32,9 @@
 
 <header>
     
-    <img class="favicon" src="images/favicon.png" alt="looking good of myself">
-</div>
+    <img class="favicon" src="images/favicon.png" alt="This is my local logo">
+
     <h1>Welcome to Chamber of Commerce</h1>
-    <button class="nav-toggle">Menu</button>
 
 
 </header> 
@@ -63,6 +64,10 @@
 
 <main>
     <h3>Chamber Directory</h3>
+    <h2>Members</h2>
+
+<section id="members">
+</section>
     <div class="view">
     <button id="grid-view">Grid View⏹️</button>
     <button id="list-view">List View📄</button>
@@ -75,8 +80,6 @@
 
 </main>
 
-<section id="members">
-</section>
 
 
 
@@ -98,9 +101,6 @@
     </div>
   </footer>
       
-
-
-</footer>
 
 
 </body>
