--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -12,8 +12,7 @@
     <link rel="icon" href="images/favicon">
     <meta property="og:title" content="Chamber  Directory of Commerce">
     <meta property="og:type" content="website">
-    <meta property="og:image" content="https://images.seeklogo.com/logo-png/2/1/british-airways-logo-png_seeklogo-22597.png",
-    ">
+    <meta property="og:image" content="https://images.seeklogo.com/logo-png/2/1/british-airways-logo-png_seeklogo-22597.png">
     <meta property="og:url" content="https://ernestsb1.github.io/wdd231/chamber/directory.html">
     <link rel="stylesheet" href="styles/normalize.css">
     <link rel="stylesheet" href="styles/directory.css">
@@ -34,7 +33,7 @@
     
     <img class="favicon" src="images/favicon.png" alt="This is my local logo">
 
-    <h1>Welcome to Chamber of Commerce</h1>
+    <h3>Welcome to Chamber of Commerce</h3>
 
 
 </header> 
@@ -63,7 +62,7 @@
 
 
 <main>
-    <h3>Chamber Directory</h3>
+    <h1>Chamber Directory</h1>
     <h2>Members</h2>
 
 <section id="members">
