--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -47,7 +47,7 @@
       </div>
     
     <ul class="nav-menu">
-        <li><a href="home.html" target="_blank">Home</a></li>
+        <li><a href="index.html" target="_blank">Home</a></li>
         <li><a href="directory.html" target="_blank">Directory</a></li>
         <li><a href="join.html" target="_blank">Join</a></li>
         <li><a href="discover.html" target="_blank">Discover</a></li>
