--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -39,8 +39,9 @@
 </header> 
 
 
-<nav>
-    <div class="hamburger" onclick="toggleMenu()">
+<nav class="nav">
+  <div class="hamburger" id="hamburger">
+
         <span></span>
         <span></span>
         <span></span>
