--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -16,7 +16,7 @@
     <meta property="og:url" content="https://ernestsb1.github.io/wdd231/chamber/directory.html">
     <link rel="stylesheet" href="styles/normalize.css">
     <link rel="stylesheet" href="styles/directory.css">
-    <script src="js/members.js"></script>
+    <script src="data/members.json"> defer</script>
     <script src="scripts/members.js" defer></script>
     <script src="scripts/directory.js" defer></script>
 
