--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -84,9 +84,9 @@
         <p>Last Modified: <span id="lastModifiedDate"></span></p>
       </div>
       <div class="social">
-        <img class="facebook" src="images/facebook.png" width="80" height="80" alt="this is facebook">
-        <img class="twitter" src="images/twitter.png" width="80" height="80" alt="this is twitter">
-        <img class="instagram" src="images/instagram.png" width="80" height="80" alt="this is instagram">
+        <img class="facebook" src="images/facebook.png"  alt="this is facebook">
+        <img class="twitter" src="images/twitter.png"  alt="this is twitter">
+        <img class="instagram" src="images/instagram.png" alt="this is instagram">
       </div>
       <div class="footer-messages">
         <p>&copy; 2025 | Chamber of Commerce</p>
