--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -32,7 +32,7 @@
     
     <img class="favicon" src="images/favicon.png" alt="This is my local logo">
 
-    <h3>Welcome to Chamber of Commerce</h3>
+    <h3>Chamber of Commerce</h3>
 
 
 </header> 
