--- a/chamber/index.html
+++ b/chamber/index.html
@@ -49,6 +49,9 @@
 
         <div class="hero">
           <div id="hero-img">    
+            <img src="images/hero-image.jpg" srcset="images/hero-image-small.jpg 480w, images/hero-image-medium.jpg 800w, images/hero-image-large.jpg 1200w" alt="This is a beautiful hero image" loading="lazy">
+
+
               <img src="images/hero-image.jpg" alt="This is a beautiful hero image" loading="lazy">    
           </div>
       </div>
