--- a/chamber/index.html
+++ b/chamber/index.html
@@ -84,7 +84,7 @@
             <section class="events">
               <div class="event-card">
                 <h2>Events</h2>
-                <img src="images/event.jpg" width="450" height="150" alt="Meaningful Event">
+                <img src="images/event.jpg" alt="Meaningful Event">
                 <p>Join us for an evening of networking and connect with other local businesses.</p>
                 <p>Attend our monthly luncheon and hear from a guest speaker on a relevant business topic.</p>
                 <p>Date: July 15, 2025</p>
@@ -94,7 +94,7 @@
             <section class="weather">
               <div class="flex">
                 <h2>Current Weather</h2>
-                <img id="weather-icon" src="images/weather.icon.png" width="50" height="50" alt="Current Weather Icon">
+                <img id="weather-icon" src="images/weather.icon.png" alt="Current Weather Icon">
                 <p id="current-weather"></p>
                 <p id="temperature"></p>
                 <p id="feels-like"></p>
