--- a/chamber/index.html
+++ b/chamber/index.html
@@ -49,7 +49,7 @@
 
         <div class="hero">
           <div id="hero-img">    
-              <img src="images/hero-image.jpg" alt="This is a beautiful hero image" loading="lazy">  
+              <img src="images/hero-image.jpg" srcset="images/hero-image.webp"  alt="This is a beautiful hero image" loading="eager">  
           <div id="join">  
               <p>Join our vibrant community of businesses and support your local economy.</p>
                 <a href="#" class="btn">Join Now</a>
@@ -128,9 +128,9 @@
             <p>Last Modified: <span id="lastModifiedDate"></span></p>
           </div>
           <div class="social">
-            <img class="facebook" src="images/facebook.png" width="100" height="100" alt="this is facebook">
-            <img class="twitter" src="images/twitter.png" width="100" height="100" alt="this is twitter">
-            <img class="instagram" src="images/instagram.png" width="100" height="100" alt="this is instagram">
+            <img class="facebook" src="images/facebook.png" width="70" height="70" alt="this is facebook">
+            <img class="twitter" src="images/twitter.png" width="70" height="70" alt="this is twitter">
+            <img class="instagram" src="images/instagram.png" width="70" height="70" alt="this is instagram">
           </div>
           <div class="footer-messages">
             <p>&copy; 2025 | Chamber of Commerce</p>
