--- a/chamber/index.html
+++ b/chamber/index.html
@@ -49,13 +49,15 @@
 
         <div class="hero">
           <div id="hero-img">    
-              <img src="images/hero-image.jpg" srcset="images/hero-image.webp"  alt="This is a beautiful hero image" loading="eager">  
+                <img src="images/hero-image.webp" srcset="images/hero-image.webp" alt="This is a beautiful hero image" loading="eager">
           <div id="join">  
               <p>Join our vibrant community of businesses and support your local economy.</p>
                 <a href="#" class="btn">Join Now</a>
              </div> 
           </div>
       </div>
+
+      
         
         <section class="hero-content">
                 <h2>Welcome to Our Chamber of Commerce</h2>
