--- a/chamber/index.html
+++ b/chamber/index.html
@@ -14,7 +14,7 @@
         <meta property="og:url" content="https://ernestsb1.github.io/wdd231/chamber/index.html">
         <link rel="stylesheet" href="styles/normalize.css">
         <link rel="stylesheet" href="styles/home.css">
-        <script src="js/members.js"></script>
+        <script src="data/members.json" defer></script>
         <script src="scripts/home.js" defer></script>
         <link rel="icon" href="favicon" type="image/favicon">
 
