--- a/chamber/join.html
+++ b/chamber/join.html
@@ -50,7 +50,7 @@
       <main class="both-container">
         <section class="join-form">
           <h1>Membership Application Form</h1>
-          <form method="get" action="thank-you.html">
+          <form method="get" action="thankyou.html">
             <label for="first-name">
               <span>First Name:</span><br>
               <input type="text" id="first-name" name="first-name" required autocomplete="given-name" title="First Name">
