--- a/chamber/thankyou.html
+++ b/chamber/thankyou.html
@@ -16,6 +16,7 @@
         <link rel="stylesheet" href="styles/join.css">
         <script src="data/members.json" defer></script>
         <script src="scripts/join.js" defer></script>
+        <script src="scripts/thankyou.js" defer></script>
         <link rel="icon" href="favicon" type="image/favicon">
 
 
