--- a/chamber/thankyou.html
+++ b/chamber/thankyou.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Chamber of Commerce Directory</title>
-        <meta name="description" content="index of Chamber of Commerce members">
+        <meta name="description" content="Chamber of Commerce members thankyou">
         <meta name="author" content="Ernest Ohwojeheri">
         <meta property="og:description" content="Welcome to the Chamber of Commerce, where we support local businesses and community development">
         <link rel="icon" href="images/favicon">
@@ -28,7 +28,7 @@
         
           <img class="favicon" src="images/favicon.png" alt="This is my local logo">
 
-    <h6>Chamber of Commerce</h6>
+    <h3>Chamber of Commerce</h3>
 
         </header>   
     <div class="navbar">
