--- a/chamber/discover.html
+++ b/chamber/discover.html
@@ -48,7 +48,8 @@
     
       
 <main>
-
+  <h1>Gallery List Item</h1>
+ 
       <section class="gallery">
       <!-- Grid content will be added dynamically -->
     </section>
