--- a/finalproject/eventify.html
+++ b/finalproject/eventify.html
@@ -26,9 +26,15 @@
       <!-- Site Name -->
    <div class="event">
   <h1>Eventify</h1>
-
-  <p>Eventify is a representative name for an event planning website, conveying the idea of simplifying event planning and management.</p>
+   <p>Eventify is a representative name for an event planning website, conveying the idea of simplifying event planning and management.</p>
 </div>
+  <section class="eventpix" >
+   <img class="abj" src="images/event-out.jpeg" width="100" height="800" alt="looking good of myself">
+   <img class="abj" src="images/event-out1.jpeg" alt="looking good of myself">
+
+
+  </section>
+ 
 </header>
     <div class="site-plan">
 
