--- a/chamber/discover.html
+++ b/chamber/discover.html
@@ -13,7 +13,7 @@
         <meta property="og:image" content="https://images.seeklogo.com/logo-png/2/1/british-airways-logo-png_seeklogo-22597.png">
         <meta property="og:url" content="https://ernestsb1.github.io/wdd231/chamber/index.html">
         <link rel="stylesheet" href="styles/normalize.css">
-        <link rel="stylesheet" href="styles/join.css">
+        <link rel="stylesheet" href="styles/directory.css">
         <link rel="stylesheet" href="styles/discover.css">
         <script src="data/gallery-items.json" defer></script>
         <script src="data/images.json" defer></script>
