--- a/finalproject/eventify.html
+++ b/finalproject/eventify.html
@@ -71,8 +71,14 @@
   <!-- Wireframe -->
    <div class="wireframe">
   <h2>Wireframe</h2>
-  <img src="wireframe-desktop.png" alt="Desktop Wireframe">
-  <img src="wireframe-mobile.png" alt="Mobile Wireframe">
+  
+  <section class="eventpix" >
+   <img class="abj" src="images/event-out.jpeg" width="100" height="800" alt="Desktop Wireframe">
+   <img class="abj" src="images/event-out1.jpeg" alt="Mobile Wireframe">
+
+
+  </section>
+ 
   </div>
   </div>
   </main>
@@ -84,11 +90,11 @@
 <p class="css">
 body {
   font-family: 'Open Sans', sans-serif;
-  background-color: #36454f;
+  background-color: #36454f, #2F4F7F;
 }
 
 h1, h2, h3{
-  color: #3498db;
+  color: #3498db, #2C3E50;
 }
 
 h1 {
