--- a/finalproject/service.html
+++ b/finalproject/service.html
@@ -52,9 +52,10 @@
       
 
       <main>
-            <button class="pre-btn"></button>
 
-        <div class="card-gallery">
+        <div class="gallery-container">
+         <button class="scroll-button prev-button" onclick="scrollGallery('prev')">&#10094;</button>
+
   <div class="card-gallery">
     <div class="card">
       <img src="images/event1.jpeg" alt="Image 1">
@@ -97,7 +98,8 @@
       <p>Indulge in delicious food, refreshing drinks, and great company at our event! With a wide range of cuisine and beverages to choose from, you'll find something to satisfy every craving. Don't miss out on the fun – get your tickets now!.</p>
     </div>
     
-    <button class="next-btn"></button>
+</div>
+<button class="scroll-button next-button" onclick="scrollGallery('next')">&#10095;</button>
 </div>
 
 
