--- a/finalproject/thankyou.html
+++ b/finalproject/thankyou.html
@@ -83,7 +83,7 @@
             <img class="eventpix" src="images/eventpix.png" width="70" height="50" alt="this is instagram">
           </div>
           <div class="footer-messages">
-            <p>&copy; 2025 | Chamber of Commerce</p>
+            <p>&copy; 2025 | Event Planning Solution</p>
             <p>Privacy Policy | Terms of Use</p>
           </div>
         </div>
