--- a/finalproject/index.html
+++ b/finalproject/index.html
@@ -3,10 +3,10 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Chamber of Commerce Directory</title>
+        <title>Eventify Event Planning Solution</title>
         <meta name="description" content="index of Eventify">
         <meta name="author" content="Ernest Ohwojeheri">
-        <meta property="og:description" content="Welcome to the Chamber of Commerce, where we support local businesses and community development">
+        <meta property="og:description" content="Eventify is an innovative event planning and management platform that empowers users to discover, create, and attend events with ease. Whether you're an event organizer, attendee, or enthusiast, Eventify streamlines the entire event experience, from planning to execution, and beyond.">
         <link rel="icon" href="images/favicon">
         <meta property="og:title" content="Eventify  index">
         <meta property="og:type" content="website">
