--- a/finalproject/thankyou.html
+++ b/finalproject/thankyou.html
@@ -3,15 +3,15 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Chamber of Commerce Directory</title>
+        <title>Eventify Event Planning Solution</title>
         <meta name="description" content="index of Eventify">
         <meta name="author" content="Ernest Ohwojeheri">
         <meta property="og:description" content=" Eventify is an innovative event planning and management platform that empowers users to discover, create, and attend events with ease. Whether you're an event organizer, attendee, or enthusiast, Eventify streamlines the entire event experience, from planning to execution, and beyond.">
         <link rel="icon" href="images/favicon">
-        <meta property="og:title" content="Eventify  Our Service">
+        <meta property="og:title" content="Eventify thankyou">
         <meta property="og:type" content="website">
         <meta property="og:image" content="https://images.seeklogo.com/logo-png/2/1/british-airways-logo-png_seeklogo-22597.png">
-        <meta property="og:url" content="https://ernestsb1.github.io/wdd231/finalproject/index.html">
+        <meta property="og:url" content="https://ernestsb1.github.io/wdd231/finalproject/thankyou.html">
         <link rel="stylesheet" href="styles/normalize.css">
         <link rel="stylesheet" href="styles/join.css">
         <script src="scripts/thanksyou.js" defer></script>
