--- a/finalproject/index.html
+++ b/finalproject/index.html
@@ -10,13 +10,17 @@
         <link rel="icon" href="images/favicon">
         <meta property="og:title" content="Eventify  index">
         <meta property="og:type" content="website">
-        <meta property="og:image" content="https://images.seeklogo.com/logo-png/2/1/british-airways-logo-png_seeklogo-22597.png">
+        <meta property="og:image" content="https://www.sportphotogallery.com/content/images/cmsfiles/product/41176/42083-list.jpg">
         <meta property="og:url" content="https://ernestsb1.github.io/wdd231/finalproject/index.html">
         <link rel="stylesheet" href="styles/normalize.css">
         <link rel="stylesheet" href="styles/home.css">
         <script src="data/home.json" defer></script>
         <script src="scripts/home.js" defer></script>
-        <link rel="icon" href="favicon" type="image/favicon">
+        <link rel="icon" href="https://ernestsb1.github.io/wdd231/finalproject/images/event-logo.png" type="image/png">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Lora:ital,wght@0,400;0,700;1,400;1,700&family=Open+Sans:wght@400;700&display=swap" rel="stylesheet">
+
 
 
 
@@ -53,16 +57,18 @@
       <main>
         
  
+  <section class="hero">
 
-<section class="hero">
-  <img src="images/hero-img.webp" alt="beautiful planning hero-content" class="hero-image">
-  <div class="hero-content">
     <h1>Welcome to Our Event Planning Solution</h1>
-    <p>Eventify is a professional event planning service that offers a wide range of solutions to cater to your specific needs. From corporate events to weddings, and from conferences to parties, our team of experts will work closely with you to bring your vision to life.</p>
-    <p>Join us today and discover the benefits of our event Planner.</p>
-    <a href="join.html" class="join-link">Join Now</a>
-  </div>
-</section>
+    <img src="images/hero-img.webp" alt="beautiful planning hero-content" class="hero-image">
+    <div class="hero-content">
+      <p>Eventify is a professional event planning service that offers a wide range of solutions to cater to your specific needs. From corporate events to weddings, and from conferences to parties, our team of experts will work closely with you to bring your vision to life.</p>
+
+      <p>Join us today and discover the benefits of our event Planner.</p>
+      <a href="join.html" class="join-link">Join Now</a>
+    </div>
+  </section>
+
 
 <h2>Your Journey, Our Expertise, Unforgettable.</h2>
 
