--- a/finalproject/service.html
+++ b/finalproject/service.html
@@ -10,12 +10,16 @@
         <link rel="icon" href="images/favicon">
         <meta property="og:title" content="Eventify  Our Service">
         <meta property="og:type" content="website">
-        <meta property="og:image" content="https://images.seeklogo.com/logo-png/2/1/british-airways-logo-png_seeklogo-22597.png">
+        <meta property="og:image" content="https://www.sportphotogallery.com/content/images/cmsfiles/product/41176/42083-list.jpg">
         <meta property="og:url" content="https://ernestsb1.github.io/wdd231/finalproject/service.html">
         <link rel="stylesheet" href="styles/normalize.css">
         <link rel="stylesheet" href="styles/service.css">
         <script src="scripts/service.js" defer></script>
-        <link rel="icon" href="favicon" type="image/favicon">
+        <link rel="icon" href="https://ernestsb1.github.io/wdd231/finalproject/images/event-logo.png" type="image/png">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Lora:ital,wght@0,400;0,700;1,400;1,700&family=Open+Sans:wght@400;700&display=swap" rel="stylesheet">
+
 
 
 
@@ -54,7 +58,7 @@
       <main>
 
         <div class="gallery-container">
-         <button class="scroll-button prev-button" onclick="scrollGallery('prev')">&#10094;</button>
+<button class="scroll-button prev-button">&#10094;</button>
 
   <div class="card-gallery">
     <div class="card">
@@ -99,7 +103,8 @@
     </div>
     
 </div>
-<button class="scroll-button next-button" onclick="scrollGallery('next')">&#10095;</button>
+<button class="scroll-button next-button">&#10095;</button>
+
 </div>
 
 
