--- a/finalproject/thankyou.html
+++ b/finalproject/thankyou.html
@@ -15,7 +15,11 @@
         <link rel="stylesheet" href="styles/normalize.css">
         <link rel="stylesheet" href="styles/join.css">
         <script src="scripts/thanksyou.js" defer></script>
-        <link rel="icon" href="favicon" type="image/favicon">
+        <link rel="icon" href="https://ernestsb1.github.io/wdd231/finalproject/images/event-logo.png" type="image/png">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Lora:ital,wght@0,400;0,700;1,400;1,700&family=Open+Sans:wght@400;700&display=swap" rel="stylesheet">
+
 
 
 
