--- a/finalproject/index.html
+++ b/finalproject/index.html
@@ -7,10 +7,13 @@
         <meta name="description" content="index of Eventify">
         <meta name="author" content="Ernest Ohwojeheri">
         <meta property="og:description" content="Eventify is an innovative event planning and management platform that empowers users to discover, create, and attend events with ease. Whether you're an event organizer, attendee, or enthusiast, Eventify streamlines the entire event experience, from planning to execution, and beyond.">
-        <link rel="icon" href="images/favicon">
+        <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+        <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+        <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+        <link rel="manifest" href="/site.webmanifest">
         <meta property="og:title" content="Eventify  index">
         <meta property="og:type" content="website">
-        <meta property="og:image" content="https://www.sportphotogallery.com/content/images/cmsfiles/product/41176/42083-list.jpg">
+        <meta property="og:image" content="https://th.bing.com/th/id/OIP.UNWJuXByetBm-H-LRz6dLwHaFn?rs=1&pid=ImgDetMain">
         <meta property="og:url" content="https://ernestsb1.github.io/wdd231/finalproject/index.html">
         <link rel="stylesheet" href="styles/normalize.css">
         <link rel="stylesheet" href="styles/home.css">
@@ -34,7 +37,7 @@
     <h1>Eventify <br>Event Planning Solution</h1>
 
     <div class="navbar">
-      <div class="hamburger" onclick="toggleMenu()">☰</div>
+      <div class="hamburger">☰</div>
       <nav class="nav-links">
           <ul> 
                         <li><a href="index.html" target="_blank">Home</a></li>
@@ -60,7 +63,7 @@
   <section class="hero">
 
     <h1>Welcome to Our Event Planning Solution</h1>
-    <img src="images/hero-img.webp" alt="beautiful planning hero-content" class="hero-image">
+    <img src="images/hero-img (2).jpg" alt="beautiful planning hero-content" class="hero-image">
     <div class="hero-content">
       <p>Eventify is a professional event planning service that offers a wide range of solutions to cater to your specific needs. From corporate events to weddings, and from conferences to parties, our team of experts will work closely with you to bring your vision to life.</p>
 
@@ -72,7 +75,7 @@
 
 <h2>Your Journey, Our Expertise, Unforgettable.</h2>
 
- <section class="four-view"></section>
+<div class="four-view"></div>
 
 <section class="grid-view">
   <div class="grid-item">
@@ -94,7 +97,6 @@
 </section>
 
 
- </section>   
 
 
       </main>
