--- a/finalproject/join.html
+++ b/finalproject/join.html
@@ -7,15 +7,18 @@
         <meta name="description" content="join of Eventify">
         <meta name="author" content="Ernest Ohwojeheri">
         <meta property="og:description" content="Eventify is an innovative event planning and management platform that empowers users to discover, create, and attend events with ease. Whether you're an event organizer, attendee, or enthusiast, Eventify streamlines the entire event experience, from planning to execution, and beyond.">
-        <link rel="icon" href="images/favicon">
+        <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+        <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+        <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+        <link rel="manifest" href="/site.webmanifest">
         <meta property="og:title" content="Eventify  index">
         <meta property="og:type" content="website">
-        <meta property="og:image" content="https://www.sportphotogallery.com/content/images/cmsfiles/product/41176/42083-list.jpg">
+        <meta property="og:image" content="https://th.bing.com/th/id/OIP.UNWJuXByetBm-H-LRz6dLwHaFn?rs=1&pid=ImgDetMain">
         <meta property="og:url" content="https://ernestsb1.github.io/wdd231/finalproject/join.html">
         <link rel="stylesheet" href="styles/normalize.css">
-        <link rel="stylesheet" href="styles/join.css">
+        <link rel="stylesheet" href="styles/service.css">
         <script src="data/home.json" defer></script>
-        <script src="scripts/join.js" defer></script>
+        <script src="scripts/home.js" defer></script>
         <link rel="icon" href="https://ernestsb1.github.io/wdd231/finalproject/images/event-logo.png" type="image/png">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -34,7 +37,7 @@
     <h1>Eventify <br>Event Planning Solution</h1>
 
     <div class="navbar">
-      <div class="hamburger" onclick="toggleMenu()">☰</div>
+        <div class="hamburger">☰</div>
       <nav class="nav-links">
           <ul> 
                         <li><a href="index.html" target="_blank">Home</a></li>
@@ -69,7 +72,8 @@
 
 <main class="form-event">
         <section class="join-form">
-          <h2>Join Our Event Form</h2>
+          <div class="he"><h1>Join Our Event Form</h1></div> 
+
           <form method="get" action="thankyou.html">
             <label for="first-name">
               <span>First Name:</span><br>
