--- a/finalproject/thankyou.html
+++ b/finalproject/thankyou.html
@@ -13,7 +13,7 @@
         <meta property="og:image" content="https://images.seeklogo.com/logo-png/2/1/british-airways-logo-png_seeklogo-22597.png">
         <meta property="og:url" content="https://ernestsb1.github.io/wdd231/finalproject/thankyou.html">
         <link rel="stylesheet" href="styles/normalize.css">
-        <link rel="stylesheet" href="styles/join.css">
+        <link rel="stylesheet" href="styles/service.css">
         <script src="scripts/thanksyou.js" defer></script>
         <link rel="icon" href="https://ernestsb1.github.io/wdd231/finalproject/images/event-logo.png" type="image/png">
         <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -33,7 +33,7 @@
     <h1>Eventify <br>Event Planning Solution</h1>
 
     <div class="navbar">
-      <div class="hamburger" onclick="toggleMenu()">☰</div>
+        <div class="hamburger">☰</div>
       <nav class="nav-links">
           <ul> 
                         <li><a href="index.html" target="_blank">Home</a></li>
