--- a/finalproject/eventify.html
+++ b/finalproject/eventify.html
@@ -218,8 +218,8 @@ img {
     height: 200px;
   }
   <br>
-.grid-container {
-    grid-template-columns: repeat(1, 1fr);
+.grid-section {
+    grid-template-columns: repeat(2, 1fr);
   }
 }
 <br>
