--- a/finalproject/eventify.html
+++ b/finalproject/eventify.html
@@ -218,7 +218,8 @@ img {
     height: 200px;
   }
   <br>
-.grid-section {
+.grid-container {
+    display: grid;
     grid-template-columns: repeat(2, 1fr);
   }
 }
