--- a/finalproject/service.html
+++ b/finalproject/service.html
@@ -31,7 +31,7 @@
     
         <header>
         
-                <img class="favicon" src="images/event-logo.png" width="90" height="50" alt="This is my local logo">
+                <img class="favicon" src="images/event-logo.png" width="70" height="auto" alt="This is my local logo">
 
     <h3>Eventify <br>Event Planning Solution</h3>
 
