--- a/finalproject/index.html
+++ b/finalproject/index.html
@@ -32,7 +32,7 @@
     
         <header>
         
-          <img class="favicon" src="images/event-logo.png" width="90" height="50" alt="This is my local logo">
+          <img class="favicon" src="images/event-logo.png" width="70" height="auto" alt="This is my local logo">
 
     <h3>Eventify <br>Event Planning Solution</h3>
 
@@ -79,8 +79,11 @@
 
 <section class="grid-view">
   <div class="grid-item">
-    <h2>Introduction</h2>
-    <p>Event planning can be a daunting task, requiring meticulous attention to detail, creativity, and exceptional organizational skills. That's where Eventify comes in a comprehensive event planning solution designed to make your events unforgettable.</p>
+    <h2>Turn Your Vision Into Reality</h2>
+    <p> Dreaming of a fairytale wedding? Our dedicated team of coordinators will work closely with you to bring your vision to life. With meticulous planning and attention to detail, we ensure that every aspect of your wedding reflects your unique style and personality. Trust us to make your dream wedding a reality..</p>
+      <h2>Let Us Make Your Event Unforgettable</h2>
+      <p>Our expert event management team is dedicated to creating a unique and memorable experience for you and your guests. From planning and coordination to execution, we handle every detail with precision and creativity. Choose us to turn your event into a stress-free success!</p>
+
   </div>
   <div class="grid-item">
     <img src="images/event-out.jpeg" alt="beautiful event out view">
