--- a/finalproject/index.html
+++ b/finalproject/index.html
@@ -17,7 +17,7 @@
         <meta property="og:url" content="https://ernestsb1.github.io/wdd231/finalproject/index.html">
         <link rel="stylesheet" href="styles/normalize.css">
         <link rel="stylesheet" href="styles/home.css">
-        <script src="data/home.json" defer></script>
+        <script src="data/event.json" defer></script>
         <script src="scripts/home.js" defer></script>
         <link rel="icon" href="https://ernestsb1.github.io/wdd231/finalproject/images/event-logo.png" type="image/png">
         <link rel="preconnect" href="https://fonts.googleapis.com">
