--- a/finalproject/join.html
+++ b/finalproject/join.html
@@ -18,7 +18,7 @@
         <link rel="stylesheet" href="styles/normalize.css">
         <link rel="stylesheet" href="styles/service.css">
         <script src="data/home.json" defer></script>
-        <script src="scripts/home.js" defer></script>
+        <script src="scripts/join.js" defer></script>
         <link rel="icon" href="https://ernestsb1.github.io/wdd231/finalproject/images/event-logo.png" type="image/png">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
