--- a/finalproject/join.html
+++ b/finalproject/join.html
@@ -32,7 +32,7 @@
     
         <header>
         
-                  <img class="favicon" src="images/event-logo.png" width="70" height="auto" alt="This is my local logo">
+                  <img class="favicon" src="images/event-logo.webp" width="70" height="auto" alt="This is my local logo">
 
     <h3>Eventify <br>Event Planning Solution</h3>
 
@@ -318,9 +318,9 @@
             <p>Last Modified: <span id="lastModifiedDate"></span></p>
           </div>
           <div class="social">
-            <img class="eventpix" src="images/eventpix.png" width="110" height="90" alt="this is facebook">
-            <img class="eventpix" src="images/eventpix.png" width="90" height="70" alt="this is twitter">
-            <img class="eventpix" src="images/eventpix.png" width="70" height="50" alt="this is instagram">
+            <img class="eventpix" src="images/eventpix.webp" width="110" height="90" alt="this is facebook">
+            <img class="eventpix" src="images/eventpix.webp" width="90" height="70" alt="this is twitter">
+            <img class="eventpix" src="images/eventpix.webp" width="70" height="50" alt="this is instagram">
           </div>
           <div class="footer-messages">
             <p>&copy; 2025 | Event Planning Solution</p>
