--- a/finalproject/index.html
+++ b/finalproject/index.html
@@ -3,15 +3,15 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Eventify Event Planning Solution</title>
+        <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+        <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+        <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+        <link rel="manifest" href="/site.webmanifest">
+        <title>Eventify Event Planning Solution</title>       
         <meta name="description" content="index of Eventify">
         <meta name="author" content="Ernest Ohwojeheri">
         <meta property="og:description" content="Eventify is an innovative event planning and management platform that empowers users to discover, create, and attend events with ease. Whether you're an event organizer, attendee, or enthusiast, Eventify streamlines the entire event experience, from planning to execution, and beyond.">
         <meta property="og:title" content="Eventify  index">
-         <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
-        <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
-        <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
-        <link rel="manifest" href="/site.webmanifest">
         <meta property="og:type" content="website">
         <meta property="og:image" content="https://th.bing.com/th/id/OIP.UNWJuXByetBm-H-LRz6dLwHaFn?rs=1&pid=ImgDetMain">
         <meta property="og:url" content="https://ernestsb1.github.io/wdd231/finalproject/index.html">
@@ -63,7 +63,7 @@
   <section class="hero">
 
     <h1>Welcome to Our Event Planning Solution</h1>
-    <img src="images/hero-img-real.jpg" alt="beautiful planning hero-content" class="hero-image">
+    <img src="images/hero-img-real.jpg" loading="lazy" alt="beautiful planning hero-content" class="hero-image">
     <div class="hero-content">
       <p>Eventify is a professional event planning service that offers a wide range of solutions to cater to your specific needs. From corporate events to weddings, and from conferences to parties, our team of experts will work closely with you to bring your vision to life.</p>
 
@@ -86,7 +86,7 @@
 
   </div>
   <div class="grid-item">
-    <img src="images/event-out.jpeg" alt="beautiful event out view">
+    <img src="images/event-out.jpeg" loading="lazy" alt="beautiful event out view">
   </div>
   <div class="grid-item">
     <h2>Benefits of Working with Eventify</h2>
@@ -116,6 +116,8 @@
             <img class="eventpix" src="images/eventpix.webp" width="90" height="70" alt="this is twitter">
             <img class="eventpix" src="images/eventpix.webp" width="70" height="50" alt="this is instagram">
           </div>
+<iframe src="https://www.loom.com/embed/43db9a8d64dd4bf7ba7abaf097fbad5b" width="200" height="100" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+
           <div class="footer-messages">
             <p>&copy; 2025 | Event Planning Solution</p>
             <p>Privacy Policy | Terms of Use</p>
