--- a/finalproject/service.html
+++ b/finalproject/service.html
@@ -3,17 +3,17 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+        <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+        <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+        <link rel="manifest" href="/site.webmanifest">
         <title>Eventify Event Planning Solution</title>
         <meta name="description" content="service of Eventify">
         <meta name="author" content="Ernest Ohwojeheri">
         <meta property="og:description" content="Eventify is an innovative event planning and management platform that empowers users to discover, create, and attend events with ease. Whether you're an event organizer, attendee, or enthusiast, Eventify streamlines the entire event experience, from planning to execution, and beyond.">    
         <meta property="og:title" content="Eventify  Our Service">
-         <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
-        <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
-        <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
-        <link rel="manifest" href="/site.webmanifest">
         <meta property="og:type" content="website">
-        <meta property="og:image" content="https://th.bing.com/th/id/OIP.UNWJuXByetBm-H-LRz6dLwHaFn?rs=1&pid=ImgDetMain">
+        <meta property="og:image" content="https://your-username.github.io/wdd231/finalproject/images/hero-img-real.jpg">
         <meta property="og:url" content="https://ernestsb1.github.io/wdd231/finalproject/service.html">
         <link rel="stylesheet" href="styles/normalize.css">
         <link rel="stylesheet" href="styles/service.css">
@@ -66,42 +66,42 @@
 
   <div class="card-gallery">
     <div class="card">
-      <img src="images/event1.jpeg" alt="Image 1">
+      <img src="images/event1.jpeg" loading="lazy" alt="Image 1">
       <h2>Experience the Magic</h2>
       <p>Step into a world of wonder and magic at our upcoming event! With stunning visuals, captivating performances, and an electric atmosphere, you'll be transported to a world beyond your wildest dreams..</p>
     </div>
     <div class="card">
-      <img src="images/event2.jpeg" alt="Image 2">
+      <img src="images/event2.jpeg" loading="lazy" alt="Image 2">
       <h2>Live Music Event</h2>
       <p>Get ready to groove to the beat of live music at our event! Featuring some of the hottest acts in the industry, this is one concert you won't want to miss. Grab your tickets now and let's get this party started!.</p>
     </div>
     <div class="card">
-      <img src="images/event3.jpeg" alt="Image 3">
+      <img src="images/event3.jpeg" loading="lazy" alt="Image 3">
       <h2>Celebrate with Us</h2>
       <p>Join us for a night of celebration and joy! Our event is the perfect opportunity to let loose, have fun, and make unforgettable memories with friends and family..</p>
     </div>
     <div class="card">
-      <img src="images/event4.jpeg" alt="Image 4">
+      <img src="images/event4.jpeg" loading="lazy" alt="Image 4">
       <h2>The Ultimate Experience</h2>
       <p>Are you ready for the ultimate experience? Our event promises to push the boundaries of excitement and entertainment. With thrilling performances, stunning visuals, and an unforgettable atmosphere, you'll be left breathless and wanting more..</p>
     </div>
     <div class="card">
-      <img src="images/event5.jpeg" alt="Image 5">
+      <img src="images/event5.jpeg" loading="lazy" alt="Image 5">
       <h2>Unforgettable Night</h2>
 <p>Join us for an unforgettable night of music, dance, and celebration! Our event promises to be an exciting experience that you won't want to miss. Get your tickets now and be a part of the fun!.</p>
     </div>
 <div class="card">
-      <img src="images/event6.jpeg" alt="Image 6">
+      <img src="images/event6.jpeg" loading="lazy" alt="Image 6">
       <h2>Exclusive Event</h2>
       <p>You're invited to an exclusive event that's not to be missed! With limited tickets available, this is your chance to experience something truly special and unique. Don't wait – secure your spot now!</p>
     </div>
     <div class="card">
-      <img src="images/event7.jpeg" alt="Image 7">
+      <img src="images/event7.jpeg" loading="lazy" alt="Image 7">
       <h2>Make Memories Last</h2>
       <p>Create memories that will last a lifetime at our event! With an unforgettable atmosphere, exciting performances, and great company, you'll be left with memories to cherish forever. Get your tickets now and make it a night to remember!</p>
     </div>
     <div class="card">
-      <img src="images/event8.jpeg" alt="Image 8">
+      <img src="images/event8.jpeg" loading="lazy" alt="Image 8">
       <h2>Food, Drink, and Fun</h2>
       <p>Indulge in delicious food, refreshing drinks, and great company at our event! With a wide range of cuisine and beverages to choose from, you'll find something to satisfy every craving. Don't miss out on the fun – get your tickets now!.</p>
     </div>
