--- a/finalproject/index.html
+++ b/finalproject/index.html
@@ -7,13 +7,16 @@
         <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
         <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
         <link rel="manifest" href="/site.webmanifest">
+        <link rel="icon" href="images/favicon">
         <title>Eventify Event Planning Solution</title>       
         <meta name="description" content="index of Eventify">
         <meta name="author" content="Ernest Ohwojeheri">
         <meta property="og:description" content="Eventify is an innovative event planning and management platform that empowers users to discover, create, and attend events with ease. Whether you're an event organizer, attendee, or enthusiast, Eventify streamlines the entire event experience, from planning to execution, and beyond.">
         <meta property="og:title" content="Eventify  index">
         <meta property="og:type" content="website">
-        <meta property="og:image" content="https://th.bing.com/th/id/OIP.UNWJuXByetBm-H-LRz6dLwHaFn?rs=1&pid=ImgDetMain">
+        <meta property="og:image" content="https://th.bing.com/th/id/OIP.UNWJuXByetBm-H-LRz6dLwHaFn?rs=1&pid=ImgDetMain">     
+        <meta property="og:image:width" content="1200">
+        <meta property="og:image:height" content="630">
         <meta property="og:url" content="https://ernestsb1.github.io/wdd231/finalproject/index.html">
         <link rel="stylesheet" href="styles/normalize.css">
         <link rel="stylesheet" href="styles/home.css">
@@ -32,7 +35,7 @@
     
         <header>
         
-          <img class="favicon" src="images/event-logo.webp" width="70" height="auto" alt="This is my local logo">
+          <img class="favicon" src="images/event-logo.webp" width="70" alt="This is my local logo">
 
     <h3>Eventify <br>Event Planning Solution</h3>
 
@@ -116,7 +119,7 @@
             <img class="eventpix" src="images/eventpix.webp" width="90" height="70" alt="this is twitter">
             <img class="eventpix" src="images/eventpix.webp" width="70" height="50" alt="this is instagram">
           </div>
-<iframe src="https://www.loom.com/embed/43db9a8d64dd4bf7ba7abaf097fbad5b" width="200" height="100" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+<iframe src="https://www.loom.com/embed/43db9a8d64dd4bf7ba7abaf097fbad5b" width="200" height="100" allowfullscreen style="border: none;"></iframe>
 
           <div class="footer-messages">
             <p>&copy; 2025 | Event Planning Solution</p>
