--- a/finalproject/service.html
+++ b/finalproject/service.html
@@ -7,6 +7,7 @@
         <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
         <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
         <link rel="manifest" href="/site.webmanifest">
+        <link rel="icon" href="images/favicon">
         <title>Eventify Event Planning Solution</title>
         <meta name="description" content="service of Eventify">
         <meta name="author" content="Ernest Ohwojeheri">
@@ -14,6 +15,8 @@
         <meta property="og:title" content="Eventify  Our Service">
         <meta property="og:type" content="website">
         <meta property="og:image" content="https://your-username.github.io/wdd231/finalproject/images/hero-img-real.jpg">
+        <meta property="og:image:width" content="1200">
+        <meta property="og:image:height" content="630">
         <meta property="og:url" content="https://ernestsb1.github.io/wdd231/finalproject/service.html">
         <link rel="stylesheet" href="styles/normalize.css">
         <link rel="stylesheet" href="styles/service.css">
@@ -31,7 +34,7 @@
     
         <header>
         
-                <img class="favicon" src="images/event-logo.webp" width="70" height="auto" alt="This is my local logo">
+                <img class="favicon" src="images/event-logo.webp" width="70" alt="This is my local logo">
 
     <h3>Eventify <br>Event Planning Solution</h3>
 
@@ -132,6 +135,8 @@
             <img class="eventpix" src="images/eventpix.webp" width="90" height="70" alt="this is twitter">
             <img class="eventpix" src="images/eventpix.webp" width="70" height="50" alt="this is instagram">
           </div>
+          <iframe src="https://www.loom.com/embed/43db9a8d64dd4bf7ba7abaf097fbad5b" width="200" height="100" allowfullscreen style="border: none;"></iframe>
+
           <div class="footer-messages">
             <p>&copy; 2025 | Event Planning Solution</p>
             <p>Privacy Policy | Terms of Use</p>
