--- a/finalproject/service.html
+++ b/finalproject/service.html
@@ -3,11 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
-        <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
-        <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
-        <link rel="manifest" href="/site.webmanifest">
-        <link rel="icon" href="images/favicon">
+        <link rel="icon" href="https://ernestsb1.github.io/wdd231/finalproject/images/event-logo.png" type="image/png">
         <title>Eventify Event Planning Solution</title>
         <meta name="description" content="service of Eventify">
         <meta name="author" content="Ernest Ohwojeheri">
@@ -21,7 +17,6 @@
         <link rel="stylesheet" href="styles/normalize.css">
         <link rel="stylesheet" href="styles/service.css">
         <script src="scripts/service.js" defer></script>
-        <link rel="icon" href="https://ernestsb1.github.io/wdd231/finalproject/images/event-logo.png" type="image/png">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Lora:ital,wght@0,400;0,700;1,400;1,700&family=Open+Sans:wght@400;700&display=swap" rel="stylesheet">
@@ -135,7 +130,7 @@
             <img class="eventpix" src="images/eventpix.webp" width="90" height="70" alt="this is twitter">
             <img class="eventpix" src="images/eventpix.webp" width="70" height="50" alt="this is instagram">
           </div>
-          <iframe src="https://www.loom.com/embed/43db9a8d64dd4bf7ba7abaf097fbad5b" width="200" height="100" allowfullscreen style="border: none;"></iframe>
+             <iframe src="https://www.loom.com/embed/43db9a8d64dd4bf7ba7abaf097fbad5b" width="200" height="100" allowfullscreen></iframe>
 
           <div class="footer-messages">
             <p>&copy; 2025 | Event Planning Solution</p>
