--- a/finalproject/join.html
+++ b/finalproject/join.html
@@ -3,18 +3,14 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
-        <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
-        <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
-        <link rel="manifest" href="/site.webmanifest">
-        <link rel="icon" href="images/favicon">
+        <link rel="icon" href="https://ernestsb1.github.io/wdd231/finalproject/images/event-logo.png" type="image/png">
         <title>Eventify Event Planning Solution</title>       
         <meta name="description" content="join of Eventify">
         <meta name="author" content="Ernest Ohwojeheri">
         <meta property="og:description" content="Eventify is an innovative event planning and management platform that empowers users to discover, create, and attend events with ease. Whether you're an event organizer, attendee, or enthusiast, Eventify streamlines the entire event experience, from planning to execution, and beyond.">
         <meta property="og:title" content="Eventify  index">         
         <meta property="og:type" content="website">
-        <meta property="og:image" content="https://th.bing.com/th/id/OIP.UNWJuXByetBm-H-LRz6dLwHaFn?rs=1&pid=ImgDetMain">
+        <meta property="og:image" content="https://your-username.github.io/wdd231/finalproject/images/hero-img-real.jpg">
         <meta property="og:image:width" content="1200">
         <meta property="og:image:height" content="630">
         <meta property="og:url" content="https://ernestsb1.github.io/wdd231/finalproject/join.html">
@@ -22,7 +18,6 @@
         <link rel="stylesheet" href="styles/service.css">
         <script src="data/home.json" defer></script>
         <script src="scripts/join.js" defer></script>
-        <link rel="icon" href="https://ernestsb1.github.io/wdd231/finalproject/images/event-logo.png" type="image/png">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Lora:ital,wght@0,400;0,700;1,400;1,700&family=Open+Sans:wght@400;700&display=swap" rel="stylesheet">
@@ -325,7 +320,7 @@
             <img class="eventpix" src="images/eventpix.webp" width="90" height="70" alt="this is twitter">
             <img class="eventpix" src="images/eventpix.webp" width="70" height="50" alt="this is instagram">
           </div>
-          <iframe src="https://www.loom.com/embed/43db9a8d64dd4bf7ba7abaf097fbad5b" width="200" height="100" allowfullscreen style="border: none;"></iframe>
+           <iframe src="https://www.loom.com/embed/43db9a8d64dd4bf7ba7abaf097fbad5b" width="200" height="100" allowfullscreen></iframe>
 
           <div class="footer-messages">
             <p>&copy; 2025 | Event Planning Solution</p>
