--- a/finalproject/index.html
+++ b/finalproject/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="icon" href="https://ernestsb1.github.io/wdd231/finalproject/images/event-logo.png" type="image/png">     
+        <link rel="icon" type="image/png" href="images/event-logo.png">
         <title>Eventify Event Planning Solution</title>       
         <meta name="description" content="index of Eventify">
         <meta name="author" content="Ernest Ohwojeheri">
