--- a/finalproject/service.html
+++ b/finalproject/service.html
@@ -15,7 +15,7 @@
         <meta property="og:image:height" content="630">
         <meta property="og:url" content="https://ernestsb1.github.io/wdd231/finalproject/service.html">
         <link rel="stylesheet" href="styles/normalize.css">
-        <link rel="stylesheet" href="styles/service.css">
+        <link rel="stylesheet" href="styles/service.css" media="print" onload="this.media='all'">
         <script src="scripts/service.js" defer></script>
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
