--- a/finalproject/service.html
+++ b/finalproject/service.html
@@ -130,7 +130,8 @@
             <img class="eventpix" src="images/eventpix.webp" width="70" height="50" alt="this is twitter">
             <img class="eventpix" src="images/eventpix.webp" width="60" height="40" alt="this is instagram">
           </div>
-<iframe width="200" height="auto" src="https://www.loom.com/embed/039247af9f784fc4b30fd42721189e42" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+<iframe width="200" height="150" src="https://www.loom.com/embed/039247af9f784fc4b30fd42721189e42" frameborder="0" allowfullscreen></iframe>
+
 
           <div class="footer-messages">
             <p>&copy; 2025 | Event Planning Solution</p>
